--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^2.3.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"server": "nodemon app.js"
+	},
+	"keywords": [],
+	"author": "Carlos Tabangay",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.20.1",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"mysql2": "^2.3.3"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
