--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/material": "^5.10.9",
+		"@mui/styled-engine-sc": "^5.10.6",
 		"axios": "^1.1.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
