--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"mysql2": "^2.3.3"
 	},
