--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.19",
+		"tailwindcss": "^3.2.4",
 		"vite": "^3.1.0"
 	}
 }
