--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
 		"axios": "^1.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.39.1",
-		"styled-components": "^5.3.6"
+		"react-hook-form": "^7.39.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
