--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
 		"axios": "^1.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.39.1"
+		"react-hook-form": "^7.39.1",
+		"react-query": "^3.39.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
