--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,20 @@
 	"name": "server",
 	"version": "1.0.0",
 	"description": "",
-	"main": "server.js",
+	"main": "index.js",
 	"scripts": {
-		"server": "nodemon server.js"
+		"server": "nodemon index.js"
 	},
 	"keywords": [],
 	"author": "Carlos Tabangay",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"mysql2": "^2.3.3"
+		"express-async-handler": "^1.2.0",
+		"mysql2": "^3.3.3"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
