--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"helmet": "^7.0.0",
+		"hpp": "^0.2.3",
+		"morgan": "^1.10.0",
 		"mysql2": "^3.3.3"
 	},
 	"devDependencies": {
