--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "concurrently \"npm run start:client\" \"npm run start:server\"",
-		"start:client": "cd client && npm run dev",
-		"start:server": "cd server && npm run server"
+		"dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+		"build": "npm run build:client && npm run build:server",
+		"preview": "concurrently \"npm run preview:client\" \"npm run preview:server\"",
+		"prod": "npm run build && npm run preview",
+		"dev:client": "cd client && npm run dev",
+		"build:client": "cd client && npm run build",
+		"preview:client": "cd client && npm run preview",
+		"dev:server": "cd server && npm run start",
+		"build:server": "cd server && npm run build",
+		"preview:server": "cd server && npm run preview",
+		"clean:dist": "rimraf ./server/dist && rimraf ./client/dist",
+		"clean:modules": "rimraf ./node_modules"
 	},
 	"workspaces": {
 		"packages": [
