--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"private": true,
+	"version": "0.0.0",
+	"main": "index.ts",
 	"scripts": {
-		"server": "nodemon index.js"
+		"start": "nodemon",
+		"build": "tsc",
+		"preview": "node dist/index.js"
 	},
 	"keywords": [],
 	"author": "Carlos Tabangay",
@@ -21,7 +23,16 @@
 		"mysql2": "^3.3.3"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.20"
+		"@types/body-parser": "^1.19.2",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/hpp": "^0.2.2",
+		"@types/morgan": "^1.9.4",
+		"@types/node": "^20.2.5",
+		"nodemon": "^2.0.20",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.1.3"
 	},
 	"overrides": {
 		"include": [
