update: db configs

--- a/server/.example.env
+++ b/server/.example.env
@@ -1,6 +1,7 @@
 # Server Config Example
-PORT=3000
-HOST=localhost
-USER=admin
-PASSWORD=admin
-DATABASE=databaseName
+SERVER_PORT=3000
+DB_PORT=4000
+DB_HOST=localhost
+DB_USER=username
+DB_PASSWORD=password
+DB_NAME=databaseName
