--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
 		"helmet": "^7.0.0",
 		"hpp": "^0.2.3",
 		"morgan": "^1.10.0",
-		"mysql2": "^3.6.1"
+		"mysql2": "^3.6.1",
+		 "rate-limiter-flexible": "^5.0.3"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.19.3",
